Use the documentlist component to render the attachment list

--- a/ng2-components/ng2-activiti-tasklist/src/components/attachment-document-list.component.html
+++ b/ng2-components/ng2-activiti-tasklist/src/components/attachment-document-list.component.html
@@ -1,7 +1,26 @@
-<document-list *ngIf="!isEmpty()" [rows]="attachments">
-    <data-columns>
-        <data-column key="name" type="text" title="Name" class="ellipsis-cell" [sortable]="true"></data-column>
-        <data-column key="created" title="Date" [sortable]="true"></data-column>
-        <data-column key="createdBy" title="created By"></data-column>
-    </data-columns>
-</document-list>
+<alfresco-document-list
+    [node]="nodeResults">
+    <content-columns>
+        <content-column key="$thumbnail" type="image"></content-column>
+        <content-column
+            title="Name"
+            key="name"
+            sortable="true"
+            class="full-width ellipsis-cell">
+        </content-column>
+        <content-column
+            title="Created By"
+            key="createdBy"
+            sortable="true"
+            class="desktop-only">
+        </content-column>
+        <content-column
+            title="Created On"
+            key="created"
+            type="date"
+            format="medium"
+            sortable="true"
+            class="desktop-only">
+        </content-column>
+    </content-columns>
+</alfresco-document-list>
